--- a/HRServer/src/main/resources/application.properties
+++ b/HRServer/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=root
 spring.datasource.password=pass@word1
 spring.application.name=HR-Service
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.mail.host = smtp.gmail.com
 spring.cloud.config.uri: http://localhost:8888/
 
